feat: only include open surfaces in api
